Resolves: tdf#88320 parsing fails with a subscript number

... followed by comma and then non-digit.

Change-Id: Ia00c662e31940270690c64e1840417436565a6c7